Had tutor session. Worked on the ORM function. Added JS file to add submit, click function for devour button. Added CSS styling. Added background image

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,8 +13,8 @@
 <h2>Devoured Burgers</h2>
 
 <ul>
-  {{#each cats}}
-    {{#if sleepy}}
+  {{#each burgers}}
+    {{#if devoured}}
         {{> burger/handleburgers devour=true}}
     {{/if}}
   {{/each}}
