--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>What A Burger</title>
+    
+    <link rel="stylesheet" href="/assets/css/burger_style.css">
     <script src="https://code.jquery.com/jquery.js"></script>
 	<script src="/assets/js/burgers.js"></script>
 </head>
