--- a/views/partials/burger/handleburgers.handlebars
+++ b/views/partials/burger/handleburgers.handlebars
@@ -2,7 +2,7 @@
 	{{burger_name}}
 
 	<button class="change-status" data-id="{{id}}" data-newdevour="{{devour}}">
-		{{#if devour}}DEVOURED A BURGER!{{else}}WAITLIST BURGERS!{{/if}}
+		{{#if devour}}Already Devoured!{{else}}DEVOUR THIS BURGER!{{/if}}
 	</button>
 
 	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
