--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,12 @@
-<h1>What A Burger</h1>
+<!-- Image and text -->
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="#">
+    <img src="https://i.pinimg.com/originals/44/c1/11/44c111473339e98604cf5c3b0c37d5f0.jpg" width="30" height="30" class="d-inline-block align-top" alt="burgerImage" loading="lazy">
+    What A Burger Lovers!
+  </a>
+</nav>
+
+<h1 class="burgertitle">What A Burger</h1>
 
 <h2>Waitlist Burgers</h2>
 
