--- a/views/partials/burger/handleburgers.handlebars
+++ b/views/partials/burger/handleburgers.handlebars
@@ -5,5 +5,5 @@
 		{{#if devour}}Already Devoured!{{else}}DEVOUR THIS BURGER!{{/if}}
 	</button>
 
-	<button class="delete-burger" data-id="{{this.id}}">DELETE!</button>
+	{{!-- <button class="delete-burger" data-id="{{this.id}}">DELETE!</button> --}}
 </li>
