--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -8,39 +8,55 @@
 
 <h1 class="burgertitle">What A Burger</h1>
 
-<h2>Waitlist Burgers</h2>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-6">
+      <h2 class="descrip">Waitlist Burgers</h2>
+        <ul>
+          {{#each burgers}}
+            {{#unless devoured}}
+                {{> burger/handleburgers devour=false}}
+            {{/unless}}
+          {{/each}}
+        </ul>
+    </div>
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-        {{> burger/handleburgers devour=false}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Devoured Burgers</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-        {{> burger/handleburgers devour=true}}
-    {{/if}}
-  {{/each}}
-</ul>
-
-<h2>Add a Burger</h2>
-<form class="create-form">
-
-  <div class="form-group">
-    <label for="burger">Type of Burgers:</label>
-    <input type="text" id="burger" name="burger_name">
+    <div class="col-sm-6">
+      <h2 class="descrip">Devoured Burgers</h2>
+        <ul>
+          {{#each burgers}}
+            {{#if devoured}}
+                {{> burger/handleburgers devour=true}}
+            {{/if}}
+          {{/each}}
+        </ul>
+    </div>
   </div>
 
-  <div class="form-group">
-    <label for="devoured">Hungry?</label><br>
-    <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-    <input type="radio" name="devoured" value="0"> Waitlist
-  </div>
+  <div class="row">
+    <div class="col-sm-4"></div>
 
-  <button type="submit">Add Burgers</button>
-</form>
+    <div class="col-sm-4">
+      <h2 class="addBurger">Add a Burger</h2>
+      <form class="create-form">
+
+        <div class="form-group">
+          <label for="burger">Type of Burgers:</label>
+          <input type="text" id="burger" name="burger_name">
+        </div>
+
+        <div class="form-group">
+          <label for="devoured">Hungry?</label><br>
+          <input type="radio" name="devoured" value="1" checked> Devoured!<br>
+          <input type="radio" name="devoured" value="0"> Waitlist
+        </div>
+
+        <button type="submit">Add Burgers</button>
+      </form>
+    </div>
+
+    <div class="col-sm-4"></div>
+  </div>
+</div>
+
+
