Change the size of button to make all same size. Changed the structure of layout in the index.handlebars

--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -11,6 +11,23 @@ body {
     color: maroon;
 }
 
+li{
+    list-style-type: none;
+    padding-bottom: 3%;
+}
+
+.container{
+    margin-bottom: 3%;
+}
+
+button{
+    width: 100%;
+    padding-top: 1%;
+    padding-bottom: 1%;
+    background-color: lightgray;
+    color: blue;
+}
+
 .descrip{
     text-align: center;
 }
