--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
   </a>
 </nav>
 
-<h1 class="burgertitle">What A Burger</h1>
+<h1 class="burgertitle">Choose burgers that you want to devour!</h1>
 
 <div class="container">
   <div class="row">
@@ -45,11 +45,11 @@
           <input type="text" id="burger" name="burger_name">
         </div>
 
-        <div class="form-group">
+        {{!-- <div class="form-group">
           <label for="devoured">Hungry?</label><br>
           <input type="radio" name="devoured" value="1" checked> Devoured!<br>
           <input type="radio" name="devoured" value="0"> Waitlist
-        </div>
+        </div> --}}
 
         <button type="submit">Add Burgers</button>
       </form>
