Tried to add a delete button. Still giving error where it doesn't want to delete

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -45,17 +45,22 @@
           <input type="text" id="burger" name="burger_name">
         </div>
 
-        {{!-- <div class="form-group">
-          <label for="devoured">Hungry?</label><br>
-          <input type="radio" name="devoured" value="1" checked> Devoured!<br>
-          <input type="radio" name="devoured" value="0"> Waitlist
-        </div> --}}
-
         <button type="submit">Add Burgers</button>
       </form>
     </div>
 
-    <div class="col-sm-4"></div>
+    <div class="col-sm-4">
+      {{!-- <h2 class="deleteBurger">Delete Burger</h2>
+      <form class="create-form">
+
+        <div class="form-group">
+          <label for="burger">Type of Burgers:</label>
+          <input type="text" id="burger" name="burger_name">
+        </div>
+
+        <button type="submit" class="delete-burger" data-id="{{this.id}}">Delete Burgers</button>
+      </form> --}}
+    </div>
   </div>
 </div>
 
