--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -49,18 +49,7 @@
       </form>
     </div>
 
-    <div class="col-sm-4">
-      {{!-- <h2 class="deleteBurger">Delete Burger</h2>
-      <form class="create-form">
-
-        <div class="form-group">
-          <label for="burger">Type of Burgers:</label>
-          <input type="text" id="burger" name="burger_name">
-        </div>
-
-        <button type="submit" class="delete-burger" data-id="{{this.id}}">Delete Burgers</button>
-      </form> --}}
-    </div>
+    <div class="col-sm-4"></div>
   </div>
 </div>
 
